dummy book to test its antora build to github pages

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
-  title: Placeholder Course Title
-  start_page: placeholder-course-name::index.adoc
+  title: Introduction to Red Hat OpenStack Services on OpenShift
+  start_page: rhoso-intro::index.adoc
 
 content:
   sources:
