--- a/antora.yml
+++ b/antora.yml
@@ -1,9 +1,9 @@
-name: placeholder-course-name
-title: Placeholder Course Title
+name: rhoso-intro
+title: Introduction to Red Hat OpenStack Services on OpenShift
 version: 1
 nav:
 - modules/ROOT/nav.adoc
 - modules/chapter1/nav.adoc
-- modules/chapter2/nav.adoc
-- modules/chapter3/nav.adoc
-- modules/appendix/nav.adoc
+#- modules/chapter2/nav.adoc
+#- modules/chapter3/nav.adoc
+#- modules/appendix/nav.adoc
