--- a/antora.yml
+++ b/antora.yml
@@ -3,7 +3,7 @@ title: Introduction to Red Hat OpenStack Services on OpenShift
 version: 1
 nav:
 - modules/ROOT/nav.adoc
-- modules/chapter1/nav.adoc
+- modules/ch1-intro/nav.adoc
 #- modules/chapter2/nav.adoc
 #- modules/chapter3/nav.adoc
 #- modules/appendix/nav.adoc
