--- a/antora.yml
+++ b/antora.yml
@@ -4,6 +4,6 @@ version: 1
 nav:
 - modules/ROOT/nav.adoc
 - modules/ch1-intro/nav.adoc
-#- modules/chapter2/nav.adoc
+- modules/ch2-services/nav.adoc
 #- modules/chapter3/nav.adoc
 #- modules/appendix/nav.adoc
